set member repository